[project]
name = "multipartencoderplay"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Kamaal Farah", email = "kamaal.f1@gmail.com" }]
dependencies = ["requests-toolbelt>=1.0.0"]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
script = 'multipartencoderplay:main'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multipartencoderplay"]
